<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_rect"
        android:backgroundTint="@color/dark_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#1D000000"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="48dp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/anton"
                    android:gravity="center"
                    android:padding="8dp"
                    android:singleLine="true"
                    android:text="@string/meta"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatImageView

                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_baseline_person_search_24" />

            </LinearLayout>

            <View

                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="48dp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/anton"
                    android:gravity="start|top"
                    android:lineSpacingExtra="6sp"
                    android:padding="8dp"
                    android:text="@string/meta_undetectable"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatImageView

                    
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    app:srcCompat="@drawable/ic_baseline_hide_source_24" />
            </LinearLayout>

            <TextView

                
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:autoSizeMaxTextSize="48dp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif"
                android:gravity="start|top"
                android:lineSpacingExtra="6sp"
                android:padding="8dp"
                android:text="@string/meta_undetectable_exp"
                android:textColor="#E6E6E6"
                android:textSize="18sp" />

            <View

                
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:alpha="0.5"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="48dp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/anton"
                    android:gravity="start|top"
                    android:lineSpacingExtra="6sp"
                    android:padding="8dp"
                    android:text="@string/meta_privacy"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatImageView

                    
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="8dp"
                    android:padding="4dp"
                    app:srcCompat="@drawable/ic_baseline_verified_user_24" />

            </LinearLayout>

            <TextView

                
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:autoSizeMaxTextSize="48dp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif"
                android:gravity="start|top"
                android:lineSpacingExtra="6sp"
                android:padding="8dp"
                android:text="@string/meta_privacy_exp1"
                android:textColor="#E6E6E6"
                android:textSize="18sp" />

            <View

                
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:alpha="0.5"
                android:background="@color/black" />

            <TextView

                
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:autoSizeMaxTextSize="48dp"
                android:autoSizeMinTextSize="12sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:fontFamily="sans-serif"
                android:gravity="start|top"
                android:lineSpacingExtra="6sp"
                android:padding="8dp"
                android:text="@string/meta_privacy_exp2"
                android:textColor="#E6E6E6"
                android:textSize="18sp" />

            <View

                
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="36dp"
                android:alpha="0.5"
                android:background="@color/black" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>